--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-  <title>Chuma Point</title>
+  <title>Health Tracker</title>
 
   <style>
     body {
